--- a/src/pages/theme/theme-setup.mdx
+++ b/src/pages/theme/theme-setup.mdx
@@ -58,7 +58,7 @@ To replace the favicon you simply need to create your own `favicon.png` file and
 If you don't want to use a `.png` file you will need to go to the `BaseHead.astro` component under `src/components/head/` and find this line to replace with your own favicon file.
 
 ```html
-<link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="icon" type="image/svg" href="/favicon.svg" />
 ```
 
 ## Open Graph / Social Image
